# YIYI-Mail

./: .gitignore  README.md  README_CN.md  __init__.py  pyproject.toml
YIYIMail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/: gateway.py  parser.py  structures.py  utils.py
